Fix UI - card overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,7 +10,6 @@ body {
 	background-color: #ececec;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
 	align-content: stretch;
 	font-family: Helvetica, Verdana, sans-serif;
 	color: #666;
@@ -70,7 +69,7 @@ select {
 	overflow-x: hidden;
 	overflow-y: auto;
 	padding-top: 60px;
-	height: 100%;
+	/* height: 100%; */
 }
 
 
@@ -120,6 +119,7 @@ select {
 		grid-row-gap: 8px;
 		grid-column-gap: 0;
 		grid-template-columns: 1fr;
+		grid-auto-rows: 1fr 1fr 1fr 1fr 1.2fr;
 		grid-template-areas:
 			"amount" "c-from" 
 			"exchange" "c-to" 
@@ -152,10 +152,6 @@ select {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-}
-
-.converter .exchange img{
-	height: 24px;
 }
 
 
@@ -326,7 +322,7 @@ select {
 					HEADS UP
 ********************************************/
 .headsUp {
-	position: absolute;
+	position: fixed;
 	z-index: 3;
 	bottom: 0;
 	left: 0;
